--- a/Covid19IncidenceRasInhibitors/extras/Table1TopSup.tex
+++ b/Covid19IncidenceRasInhibitors/extras/Table1TopSup.tex
@@ -1,10 +1,7 @@
-\begin{table}
-\caption{\textbf{Patient demographics.} We report proportion of initiators satisfying selected base-line characteristics and the standardized difference of population proportions (StdDiff) before and after stratification.  Less extreme StdDiffs through stratification suggest improved balance between patient cohorts through propensity score adjustment.}\label{tab:demographics}
-\vspace*{-0.5em}
-\centerline{
-\resizebox{0.5\textwidth}{!}{
 \rowcolors{2}{gray!6}{white}
-\begin{tabular}{lrrrrrr}
+\begin{longtable}{lrrrrrrrrrrrr}
+\caption{Patient demographics. We report proportion of initiators satisfying selected base-line characteristics and the standardized difference of population proportions (StdDiff) before and after stratification.  Less extreme StdDiffs through stratification suggest improved balance between patient cohorts through propensity score adjustment.}\label{tab:demographics}
+\\
 \hiderowcolors
 \toprule
 & \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification} \\
@@ -18,4 +15,16 @@
   & \multicolumn{1}{c}{C (\%)}
   & \multicolumn{1}{c}{StdDiff} \\
 \midrule
-\showrowcolors
+\endfirsthead
+(Continued) & \multicolumn{3}{c}{Before stratification} & \multicolumn{3}{c}{After stratification} \\
+% Extra row
+\cmidrule(lr){2-4} \cmidrule(lr){5-7}
+\multicolumn{1}{c}{Characteristic}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff}
+  & \multicolumn{1}{c}{T (\%)}
+  & \multicolumn{1}{c}{C (\%)}
+  & \multicolumn{1}{c}{StdDiff} \\
+\midrule
+\endhead
