--- a/Covid19IncidenceRasInhibitors/extras/BalanceFig.tex
+++ b/Covid19IncidenceRasInhibitors/extras/BalanceFig.tex
@@ -1,8 +1,9 @@
 \begin{figure}
-	\caption{Propensity score stratified (left) and matched (right) covariate balance
-	and preference score distribution (bottom) for
+	\caption{Preference score distributions,
+	propensity score stratified (middle column) and matched (right column) covariate balance
+	and negative control error distributions (bottom row) for
 	TARGET vs COMPARATOR in the DATASOURCE data source.}
 	\centerline{
-  		\includegraphics[width=0.4\textwidth]{FILENAME}
+  		\includegraphics[width=0.8\textwidth]{FILENAME}
   	}
 \end{figure}
